[tool.poetry]
authors = ["azriel1rf"]
description = "OpenAI Gym environment for Poker including No Limit Hold'em(NLHE) and Pot Limit Omaha(PLO)"
name = "poker-gym"
version = "0.1.0.1"

[tool.poetry.dependencies]
PettingZoo = "^1.17.0"
gym = "^0.23.1"
numpy = "^1.21.5"
phevaluator = "^0.5.0.4"
python = ">=3.7,<3.10"
ray = {version = "^1.11.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = "^6.3.2"
darglint = "^1.8.1"
flake8 = "^3.9.2"
ipython = "^7.32.0"
mypy = "^0.941"
pre-commit = "^2.17.0"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
reorder-python-imports = "^3.0.1"
types-all = "^1.0.0"

[tool.poetry.extras]
rllib = ["ray"]
tune = ["ray"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
exclude = ".venv"
ignore_missing_imports = "True"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.pyright]
include = ["poker_gym", "test"]
pythonVersion = "3.9"
venvPath = ".venv"
